2007-03-07  Tommi Asiala  <tommi@asiala.info>

	* default.css
	* download.html
	* features.html
	* getinvolved.html
	* images/applet-plugins.png
	* images/package-x-generic.png
	* images/Makefile.am
	* index.html
	* Makefile.am
	* plugins.html
		
	New layout, division to multiple pages and new content including
	a page about plugins.

2007-03-05  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.6.0 release.

2007-02-28  Boyd Timothy  <btimothy@gmail.com>

	* images/applet-small.png: Updated to show the newer pin icons.

2007-02-26  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.5.9 release.

2007-02-12  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.5.8 release.

2007-02-12  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.5.7 release.

2007-02-05  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.5.6 release.

2007-01-29  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Include NEWS and ChangeLog back into the development
	release list (it somehow got omitted).

2007-01-29  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.5.5 release.

2007-01-23  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Mention the #tomboy IRC channel in the Discussion section.
	
2007-01-19  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.5.4 release.
	
2007-01-17  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Changed the shortcut icon to use images/tomboy-16.png.
	
	* images/tomboy-16.png: New file.

2007-01-17  Boyd Timothy  <btimothy@gmail.com>

	* ChangeLog:
	* default.css:
	* index.html:
	* Makefile.am
	* images/applet-small.png
	* images/bulletpoint.gif
	* images/Makefile.am
	* images/pinned-notes.png
	* images/search-small.png
	* images/tomboy.png
	* images/tomboy-128.png
	* images/windows-small.png
	
	Initial tomboy projects page (former location was
	http://www.beatniksoftware.com/tomboy).