@@ -70,6 +70,25 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+
+	    <h3>March 12th 2007</h3>
+   	      Stable version 0.6.1 released!  This will be the version included by
+   	      GNOME 2.18.0.  This release includes updated translations for the
+   	      following languages:
+   	      <ul>
+   	        <li>Traditional Chinese/Hong Kong (zh_HK),
+   	        Traditional Chinese/Taiwan (zh_TW), Serbian (sr), Finnish (fi),
+   	        Catalan (ca), English/British (en_GB), Gujarati (gu),
+   	        Macedonian (mk), Estonian (et), Bulgarian (bg), Hungarian (hu),
+   	        Dutch (nl), Russian (ru), Japanese (ja)</li>
+   	      </ul>
+   	      <a href="download.html">Download it</a>
+   	    
+   	    <h3>March 9th 2007</h3>
+   	      A <a href="http://live.gnome.org/Tomboy/DevMeeting08Mar2007">
+   	      developers meeting</a> was held and the
+   	      <a href="http://live.gnome.org/Tomboy/RoadMap#0_8_0">Road Map for
+   	      Tomboy 0.8.0</a> is now defined!
 	    
 	    <h3>March 5th 2007</h3>
    	      Stable version 0.6.0 released! New features since previous stable
