@@ -1,3 +1,8 @@
+2007-03-12  Boyd Timothy  <btimothy@gmail.com>
+
+	* index.html: Updated for 0.6.1 release.
+	* download.html: Ditto.
+
 2007-03-07  Tommi Asiala  <tommi@asiala.info>
 
 	* default.css
